# patterns

interpreter_pattern/: CMakeLists.txt
interpreter_pattern/data/: file.txt
interpreter_pattern/include/: Expression.h  FixBracketsSpace.h  RemoveExtraNewLines.h  RemoveExtraSpace.h  ReplaceHyphenWithDash.h  ReplaceQuotes.h  TextInterpret.h  utils.h
interpreter_pattern/src/: FixBracketsSpace.cpp  RemoveExtraNewLines.cpp  RemoveExtraSpace.cpp  ReplaceHyphenWithDash.cpp  ReplaceQuotes.cpp  TextInterpret.cpp  main.cpp  utils.cpp
observer_pattern/: CMakeLists.txt
observer_pattern/include/: Deanery.h  Department.h  Subject.h  Teacher.h  utils.h
observer_pattern/src/: Deanery.cpp  Department.cpp  Teacher.cpp  main.cpp  utils.cpp
project_pattern/: CMakeLists.txt
project_pattern/include/core/: Character.h  Enemy.h  Field.h  GameManager.h  Hero.h
project_pattern/include/enums/: GameEvent.h  TypeEnemy.h
project_pattern/include/factory/: EnemyFactory.h  FactoryCharacter.h
project_pattern/include/observers/: GameLogger.h  GameStatistics.h  Observer.h  Subject.h
project_pattern/include/utils/: EventData.h  Random.h
project_pattern/src/: main.cpp
project_pattern/src/core/: Enemy.cpp  Field.cpp  GameManager.cpp  Hero.cpp
project_pattern/src/enums/: TypeEnemy.cpp
project_pattern/src/factory/: EnemyFactory.cpp
project_pattern/src/observers/: GameLogger.cpp  GameStatistics.cpp  Subject.cpp
project_pattern/src/utils/: Random.cpp
proxy_pattern/: CMakeLists.txt
proxy_pattern/SFML/include/SFML/Graphics/: Image.hpp  RenderWindow.hpp  Texture.hpp
proxy_pattern/include/: Image.h  MouseController.h  ProxyImage.h  RealImage.h
proxy_pattern/src/: MouseController.cpp  ProxyImage.cpp  RealImage.cpp  main.cpp
